tests/NormalTests/paczka1/small_fuzzy/10423998.err
Error in line 1: yC0Ii A254 29,4
Error in line 3: 8KH6 S954 82,9
Error in line 8: nMLLWzhrLp S954 74,25
Error in line 9: A736 A254 50,3
